@@ -1,3 +1,11 @@
+2012-03-09  Sebastien Binet  <binet@voatlas51.cern.ch>
+
+	* tagging PyUtils-00-11-21
+	* fix bug #89205: catch exception during diff-root
+	* remember there were a problem during the dump
+	* M python/scripts/diff_root_files.py
+	* M python/RootUtils.py
+
 2012-03-06  Sebastien Binet  <binet@voatlas51.cern.ch>
 
 	* tagging PyUtils-00-11-20
